--- a/.github/workflows/script-injection-test.yml
+++ b/.github/workflows/script-injection-test.yml
@@ -11,7 +11,7 @@ jobs:
       - env:
           issue_title: '${{ github.event.issue.title }}'
 
-      - run: |
+        run: |
           
           if [[ "$issue_title" == *"bug"* ]]; then
             echo "Issue is about a bug!"
